# ProgramDesignHomework

./: .gitignore  CMakeLists.txt  README.md  export.py  main.cpp  score.txt  user.txt  version.rc
UI/: qml.qrc
UI/qml/: App.qml
UI/qml/page/: AdministratorPage.qml  StudentPage.qml  TeacherPage.qml
UI/qml/view/: adminArticleView.qml  adminCompetitionView.qml  adminCourseView.qml  adminProjectView.qml  adminScoreView.qml  adminUserView.qml  stuArticleView.qml  stuCompetitionView.qml  stuGradeView.qml  stuInfoView.qml  stuProjectView.qml  teaCourseView.qml  teaGradeView.qml  teaStatView.qml
UI/qml/window/: AboutWindow.qml  AccountInfoWindow.qml  AdminWindow.qml  ForgetPwdWindow.qml  LoginWindow.qml  MainWindow.qml  StudentWindow.qml  TeacherWindow.qml
backend/: UserManager.cpp  UserManager.h  backendManager.cpp  backendManager.h  const.h  database.cpp  database.h  io.cpp  io.h  struct.h
test/: testCaseGenerator.py  unit_test.cpp
